# cs910-lab

./: .gitignore  README.md  pyproject.toml  setup.sh
constants/: string.py
data/: uci.py
equations/: regression.py
model/: __init__.py  uciml.py
plot/: general.py  stats.py
project/: CS910 DA project analysis.xlsx  bibliographies.yml  report.typ  template.typ
project/cleaners/: aurora.py  geomagnetic.py  solar_radio_flux.py  sunspot.py
project/cleaners/utils/: file.py  get_kp_index.py
project/dataset/Aurora/: cleaned_2000.csv  cleaned_2001.csv  cleaned_2002.csv  wic_boundaries_2000_05.csv  wic_boundaries_2000_06.csv  wic_boundaries_2000_07.csv  wic_boundaries_2000_11.csv  wic_boundaries_2001_02.csv  wic_boundaries_2001_03.csv  wic_boundaries_2001_05.csv  wic_boundaries_2001_09.csv  wic_boundaries_2001_11.csv  wic_boundaries_2002_05.csv  wic_boundaries_2002_06.csv  wic_boundaries_2002_07.csv  wic_boundaries_2002_08.csv  wic_boundaries_2002_09.csv  wic_boundaries_2002_10.csv
project/dataset/SolarRadioFlux/: cleaned_2000_radio_flux_absolute_observation.csv  cleaned_2001_radio_flux_absolute_observation.csv  cleaned_2002_radio_flux_absolute_observation.csv
project/dataset/Sunspot/: cleaned_g2000.csv  cleaned_g2001.csv  cleaned_g2002.csv
project/dataset/geomagnetic/: cleaned_2000_geomagnetic_solar_indices.csv  (+3 more)
src/exercise_3/: main.py  problem1.py  problem2.py  problem3.py  problem4.py  problem5.py
src/exercise_4/: car.arff  car.names  car2.arff
utils/: __init__.py  colors.py  files.py  formulas.py  iters.py  numeration.py  path.py  pipeline.py
