[tool.poetry]
name = "cs910-lab"
version = "0.1.0"
description = ""
authors = ["Xanonymous <trusaidlin@gmail.com>"]
readme = "README.md"
packages = [
    {include = "src"}
]

[tool.poetry.dependencies]
python = ">=3.12 <3.13"
ucimlrepo = "^0.0.3"
pandas = "^2.1.2"
matplotlib = "^3.8.1"
scikit-learn = "^1.3.2"
scipy = "^1.11.3"
statsmodels = "^0.14.0"
patsy = "^0.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
